--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:watch": "tsx watch --env-file=.env  src/server.ts",
     "start:dist": "npm run dist && node dist/src/index.js"
   },
-  "keywords": [],
+  "keywords": ["drivers", "cars", "teams"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
